[Add] Tooltips: from the `poshytip` library
The Foundation 5 tooltips align with the tooltip arrow all the way to
the left, which looks weird.

--- a/global_change_lab/templates/partials/trainingbits_grid.html
+++ b/global_change_lab/templates/partials/trainingbits_grid.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {# <ul class="trainingbit-list-view small-block-grid-1 medium-block-grid-3 large-block-grid-4"> #}
 <ul class="trainingbit-list-view {{ extra_classes }}">
 {% for trainingbit in trainingbits %}
@@ -31,8 +32,8 @@
         {% endif %}
         {% endcomment %}
         {% if not hide_metadata %}
-        <span class="icon small heart red"></span> {{ trainingbit.likes.count }}
-        <span class="icon small megaphone red"></span> {{ trainingbit.project_set.count }}
+        <div class="tooltip" data-tooltip="{% trans 'Number of likes this training bit has' %}"><span class="icon small heart red"></span> {{ trainingbit.likes.count }}</div>
+        <div class="tooltip" data-tooltip="{% trans 'Number of project this training bit has' %}"><span class="icon small megaphone red"></span> {{ trainingbit.project_set.count }}</div>
         {% endif %}
         <hr>
       </div>
