--- a/skills/templates/skills/partials/skill_list_large.html
+++ b/skills/templates/skills/partials/skill_list_large.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load i18n %}
 <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-2 xlarge-block-grid-3 skill-list-view">
   {% for skill in skills %}
   <li class="row">
@@ -15,8 +16,8 @@
       <div class="info">
         <span class="trainingbit-count">{{ skill.trainingbit_count }} Training Bits</span>
         <hr>
-        <span class="icon small heart red"></span> {{ skill.likes.count }}
-        <span class="icon small users red"></span> {{ skill.users_completed.count }}
+        <div class="tooltip" data-tooltip="{% trans 'Number of likes this skill has' %}"><span class="icon small heart red"></span> {{ skill.likes.count }}</div>
+        <div class="tooltip" data-tooltip="{% trans 'Number of users who have this skill' %}"><span class="icon small users red"></span> {{ skill.users_completed.count }}</div>
       </div>
     </div>
   </li>
