[Add] trainingbit_edit_content: Add help icons

--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -64,6 +64,12 @@ Offline.on('up', function() {
 
   <div class="trainingbit">
     <h1>1. Learn</h1>
+    <a href="#" class="info-icon" data-reveal-id="learn-info-modal" data-reveal>&#8505;</a>
+    <div id="learn-info-modal" class="reveal-modal" data-reveal>
+      <h1>Learn</h1>
+      {% itrans "This first part of the training bit is focused on giving you the right input and information about the topic you are studying. Whether it is a text on the background of the topic, a tutorial on how to use a specific tool or model or some input that inspires your creative thinking it will help you to understand and later, apply, this particular field." %}
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
     <div class="trainingbit-content-editor learn-section" id="learn-edit">
       <ul>
       </ul>
@@ -73,6 +79,12 @@ Offline.on('up', function() {
     </div>
 
     <h1>2. Act</h1>
+    <a href="#" class="info-icon" data-reveal-id="act-info-modal" data-reveal>&#8505;</a>
+    <div id="act-info-modal" class="reveal-modal" data-reveal>
+      <h1>Act</h1>
+      {% itrans "The second part of each training bit is focused on action. Whether you have to go out an take photos of your stencil or answer a couple of tricky questions, this is where we want you to act and use the information you read through in the first part in real life." %}
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
     <div class="trainingbit-content-editor act-section" id="act-edit">
       <ul>
       </ul>
@@ -81,6 +93,12 @@ Offline.on('up', function() {
       </div>
     </div>
     <h1>3. Share</h1>
+    <a href="#" class="info-icon" data-reveal-id="share-info-modal" data-reveal>&#8505;</a>
+    <div id="share-info-modal" class="reveal-modal" data-reveal>
+      <h1>Share</h1>
+      {% itrans "The last part of the training bit - and a step you need to do to complete it - is to share your work with the rest of us. Whether it is a short essay and a video of your latest campaign or a reflection about the use of a specific tool, it is an opportunity for you to share and connect with the Global Change Lab community." %}
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
     <div class="trainingbit-content-editor share-section" id="share-edit">
       <ul>
       </ul>
