[Design&Add] Add Creative Commons icons to footer

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -178,6 +178,12 @@
       <img id="footer-logo" src="{% static 'images/logo-small-footer.png' %}">
       <img id="footer-guy" src="{% static 'images/footer-peace-guy.png' %}">
     </div>
+    <div class="creative-commons-icons">
+      <span class="icon cc" href="#"></span>
+      <span class="icon cc-by" href="#"></span>
+      <span class="icon cc-nc" href="#"></span>
+      <span class="icon cc-sa" href="#"></span>
+    </div>
     {% endblock %}
     </div>
   </footer>
