[Cleanup] skill_edit: Fix comment

--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="page-buttons">
-  {# View trainingbit button #}
+  {# View skill button #}
   {% if skill %}
     <a href="{{ skill.get_absolute_url }}" class="button success">View skill</a>
   {% endif %}
