--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -1,16 +1,26 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block nav_buttons %}{% endblock %}
 
 {% block content %}
 
-<div id="front-page-greeter">
-  <h2>Change the world</h2><br>
-  <h1>Bit by Training Bit</h1>
-  <p>The Global Change Lab
-  is a training hub for
-  global activists</p>
-  <a href="{% url 'account_signup' %}" class="button join">Join us <span class="icon add-user"></span></a>
+
+<div id="greeter-container">
+  <img src="{% static 'images/front_page-peace-guy.png' %}">
+  <div id="front-page-greeter">
+    <div class="announcement">
+      <span class="red">Change<br> the world!</span>
+      Bit by bit
+    </div>
+    <div class="info">
+      The Global Change Lab is an
+      online training hub for
+      global activists.
+      <strong>Start your training now!</strong>
+      <a href="{% url 'account_signup' %}" class="button join">Join us</a>
+    </div>
+  </div>
 </div>
 <div class="row" id="front-page-cols">
   <div class="medium-4 columns">
