[Fix] Open Graph URL error
`request.build_absolute_uri` is a function that, if not passed any
argument, simply returns the current URL. Therefore appending `url` (the
relative URL to the current object) will include the relative URL of the
object twice.

--- a/skills/templates/skills/partials/metadata_tags.html
+++ b/skills/templates/skills/partials/metadata_tags.html
@@ -28,7 +28,7 @@
   {% endif %}
 
   {# URL #}
-  <meta property="og:url" content="{{ request.build_absolute_uri }}{{ url }}">
+  <meta property="og:url" content="{{ request.build_absolute_uri }}">
 
   {# Facebook App ID #}
   <meta property="fb:app_id" content="1396269957300039">
