[Fix] trainer-dashboard: Add missing </div> (close-tag)

--- a/global_change_lab/templates/trainer_dashboard.html
+++ b/global_change_lab/templates/trainer_dashboard.html
@@ -76,6 +76,7 @@
         {% else %}
         <div class="empty-message">You have no public skills</div>
         {% endif %}
+      </div>
     </div>
   </div>
 </div>
