[Fix&Design] .page-buttons on skill_overview and trainingbit_overview
The buttons did not have the same color on the two pages in some cases

+ Move .page-buttons from `skills.scss` to `app.scss`
+ trainingbits_overview: Add class to body

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -587,6 +587,17 @@ div.gcl-column2 {
   }
 }
 
+// Ensure that sorting/filtering buttons display correctly
+body.skills-overview, body.trainingbits-overview {
+  .page-buttons {
+    .button {
+      color: white;
+      background-color: $gcl-darkgray;
+    }
+  }
+}
+
+
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
