--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 <h1>Training Bit overview</h1>
+{% block body-classes %}trainingbits-overview{% endblock %}
 
 {% block info %}
 <p>
