[Add] "Show recommended" to trainingbit and skill overviews
+ Rename `TrainingBit.recommended` to `TrainingBit.is_recommended`
+ Add recommend button to skill_view and trainingbit_cover
+ Remove recommend button from trainingbit_view

--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -15,6 +15,15 @@
 
 {% block content %}
 <div class="page-buttons">
+  {# Mark as recommended #}
+  {% permission request.user has 'skill.recommend' %}
+    {% if skill.is_recommended %}
+      <a href="{% url 'skills:skill_recommend' skill.id %}" class="button admin-button info">Remove recommendation</a>
+    {% else %}
+      <a href="{% url 'skills:skill_recommend' skill.id %}" class="button admin-button success">Mark as recommended</a>
+    {% endif %}
+  {% endpermission %}
+
   {# Mark as public #}
   {% permission request.user has 'skill.publicize' %}
     {% if skill.is_draft %}
