--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -18,6 +18,17 @@ behind the topics.</p>
 
 {% block content %}
 <div class="page-buttons">
+  {# View recommended #}
+  {% if showing_recommended %}
+    <a href="{% url 'skills:trainingbits_overview' %}" class="button">
+      Show all
+    </a>
+  {% else %}
+    <a href="{% url 'skills:trainingbits_overview_recommended' %}" class="button">
+      Show recommended
+    </a>
+  {% endif %}
+
   {# Topics #}
     {% if topic_chosen %}
       <a href="{% url 'skills:trainingbits_overview' topic_chosen.slug %}" class="button sorting" data-dropdown="skill-all-topics">
