[Design] Change "Newest" to "Sort by" on overviews

--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -54,7 +54,7 @@ behind the topics.</p>
 
   {# Sorting #}
   <a href="#" class="button sorting" data-dropdown="skill-sort">
-    Newest
+    Sort by
     <span class="icon triangle-down red"></span>
   </a>
   <ul id="skill-sort" class="f-dropdown" data-dropdown-content>
