--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -47,7 +47,7 @@
 
   {# Sorting #}
   <a href="#" class="button sorting" data-dropdown="skill-sort">
-    Newest
+    Sort by
     <span class="icon triangle-down red"></span>
   </a>
   <ul id="skill-sort" class="f-dropdown" data-dropdown-content>
