[Design] footer: Add static links and change headers

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -152,7 +152,7 @@
       </div>
       <div class="row" id="footer-links">
         <div class="large-4 columns">
-          <h6>Global Change Lab</h6>
+          <h6>From The Lab</h6>
 
           {% load flatpages %}
           {% get_flatpages as flatpages %}
@@ -161,18 +161,15 @@
           {% endfor %}
         </div>
         <div class="large-4 columns">
-          <h6>Training principals</h6>
+          <h6>About Training</h6>
           <a class="notice" href="#">Who we work with</a>
-          <a class="notice" href="#">GP</a>
-          <a class="notice" href="#">News</a>
-          <a class="notice" href="#">Contact</a>
+          <a class="notice" href="http://www.globalplatforms.org/training-principles">{% itrans 'Training Principles' %}</a>
+          <a class="notice" href="http://www.globalplatforms.org/all-trainings">{% itrans 'Get Trained Face To Face' %}</a>
         </div>
         <div class="large-4 columns">
-          <h6>Training extras</h6>
-          <a class="notice" href="#">Search for a training</a>
-          <a class="notice" href="#">All training</a>
-          <a class="notice" href="#">How to apply</a>
-          <a class="notice" href="#">Who we are</a>
+          <h6>Who We Are</h6>
+          <a class="notice" href="http://www.globalplatforms.org">Global Platforms</a>
+          <a class="notice" href="http://ms.dk">ActionAid Denmark</a>
         </div>
       </div>
     </div>
