[Design] welcome-flow: Update next buttons
- Remove "1 2 3" progress/page indicator

--- a/global_change_lab/templates/new_user.html
+++ b/global_change_lab/templates/new_user.html
@@ -41,8 +41,7 @@
     </div>
   </div>
   <div class="new-user-progress">
-    <span class="white">1</span> 2 3
-    <a class="button next" href="{% url 'new_user_input_details' %}">Next</a>
+    <a class="button next" href="{% url 'new_user_input_details' %}">1/3 Next - update your profile</a>
   </div>
 </div>
 
