--- a/global_change_lab/templates/new_user_topics.html
+++ b/global_change_lab/templates/new_user_topics.html
@@ -20,8 +20,7 @@
   </div>
 
   <div class="new-user-progress">
-    1 2 <span class="white">3</span>
-    <button id="start-using-gcl" class="button next">Start using Global Change Lab</button>
+    <button id="start-using-gcl" class="button next">{% itrans '3/3 Start using Global Change Lab' %}</button>
   </div>
   </form>
 </div>
