[Design] trainingbit_cover: Change shares tooltip text

--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -54,7 +54,7 @@
     <div class="metadata-with-like-button">
       <div class="tooltip" data-tooltip="{% trans 'Number of likes this training bit has' %}">{% include 'skills/partials/like_counter.html' with object=trainingbit %}</div>
       <div class="tooltip" data-tooltip="{% trans 'Number of users who are currently taking this training bit' %}"><span class="icon users red"></span><span class="count">{{ trainingbit.users_in_progress.count }}</span></div>
-      <div class="tooltip" data-tooltip="{% trans 'Number of projects submitted to this training bit' %}"><span class="icon megaphone red"></span><span class="count">{{ trainingbit.project_set.count }}</span></div>
+      <div class="tooltip" data-tooltip="{% trans 'Number of shares' %}{# submitted to this training bit' #}"><span class="icon megaphone red"></span><span class="count">{{ trainingbit.project_set.count }}</span></div>
 
       {% include 'skills/partials/like_button.html' with object=trainingbit %}
     </div>
