--- a/global_change_lab/templates/account/login.html
+++ b/global_change_lab/templates/account/login.html
@@ -25,7 +25,7 @@
 
 <div class="small-row">
   <div class="medium-6 columns signup">
-      <h2 class="column-header">{% itrans 'Sign up for a Global Change Lab account' %}</h2>
+      <h2 class="column-header">{% itrans 'Sign in with your Global Change Lab account' %}</h2>
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
         {# {{ form.as_p }} #} {# TODO: Use translation instead of this manual override #}
@@ -108,18 +108,18 @@
       {% endcomment %}
     </div>
     <div class="medium-6 columns social-login">
-      <h2 class="column-header">{% itrans 'Or sign up with these services' %}</h2>
+      <h2 class="column-header">{% itrans 'Or sign in with these services' %}</h2>
       <a class="social-button facebook" href="{% provider_login_url "facebook" %}">
         <div class="logo"><span class="icon-social facebook white"></span></div>
-        <div class="text"><span>Sign up with <strong>Facebook</strong></span></div>
+        <div class="text"><span>Sign in with <strong>Facebook</strong></span></div>
       </a>
       <a class="social-button twitter" href="{% provider_login_url "twitter" %}">
         <div class="logo"><span class="icon-social twitter white"></span></div>
-        <div class="text"><span>Sign up with <strong>Twitter</strong></span></div>
+        <div class="text"><span>Sign in with <strong>Twitter</strong></span></div>
       </a>
       <a class="social-button google" href="{% provider_login_url "google" %}">
         <div class="logo"><span class="icon-social google-plus white"></span></div>
-        <div class="text"><span>Sign up with <strong>Google+</strong></span></div>
+        <div class="text"><span>Sign in with <strong>Google+</strong></span></div>
       </a>
   </div>
 </div>
